adding links to nav

--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
   <body>
     <div class="navbar">
       <div class="container">
-        <a href="#">Html <span>Css</span></a>
+        <a href="#">Html<span>Css</span></a>
+        <nav>
+          <ul class="primary-nav">
+            <li class="current"><a href="#">Home</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Pricing</a></li>
+          </ul>
+          <ul class="secondary-nav">
+            <li class="current"><a href="#">Home</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Pricing</a></li>
+          </ul>
+        </nav>
       </div>
     </div>
   </body>
