--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
             <li><a href="#">Pricing</a></li>
           </ul>
           <ul class="secondary-nav">
-            <li class="current"><a href="#">Home</a></li>
-            <li><a href="#">Features</a></li>
-            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Contact</a></li>
+            <li class="go-premium-cta"><a href="#">Go Premium</a></li>
           </ul>
         </nav>
       </div>
