adding hamburger menu for mobile scrns

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <div class="navbar">
       <div class="container">
         <a href="#">Html<span>Css</span></a>
+
+        <img
+          id="mobile-cta"
+          class="mobile-menu"
+          src="images/menu.svg"
+          alt="open navigation"
+        />
+
         <nav>
           <ul class="primary-nav">
             <li class="current"><a href="#">Home</a></li>
