--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
         />
 
         <nav>
+          <img
+            id="mobile-exit"
+            class="mobile-menu-exit"
+            src="images/exit.svg"
+            alt="Close navigation"
+          />
           <ul class="primary-nav">
             <li class="current"><a href="#">Home</a></li>
             <li><a href="#">Features</a></li>
