first part of hero section

--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
             <li class="go-premium-cta"><a href="#">Go Premium</a></li>
           </ul>
         </nav>
+
+        <section class="hero">
+          <div class="container">
+            <div class="left-col">
+              <p class="subhead">Its all CSS</p>
+              <h1>A design by Oscar</h1>
+              <div class="hero-cta">
+                <a href="#" class="primary-cta">Its a button</a>
+                <a href="#" class="watch-video-cta">
+                  <img src="images/watch.svg" alt="Watch a video" />
+                  Watch a video
+                </a>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </div>
   </body>
