--- a/index.html
+++ b/index.html
@@ -50,6 +50,27 @@
                 </a>
               </div>
             </div>
+
+            <img
+              class="hero-image"
+              src="images/illustration.svg"
+              alt="Illustration image"
+            />
+          </div>
+        </section>
+
+        <section class="features-section">
+          <div class="container">
+            <ul>
+              <li>Unlimited Tasks</li>
+              <li>SMS Task Reminders</li>
+              <li>Confetti Explosions upon Task Completions</li>
+              <li>Social Media Announcements</li>
+              <li>Real Time Collaboration</li>
+              <li>Other awesome features</li>
+            </ul>
+
+            <img src="images/holding-phone.jpg" alt="Man holding phone" />
           </div>
         </section>
       </div>
