--- a/index.html
+++ b/index.html
@@ -73,6 +73,44 @@
             <img src="images/holding-phone.jpg" alt="Man holding phone" />
           </div>
         </section>
+
+        <section class="testimonials-section">
+          <div class="container">
+            <li>
+              <img src="images/person.jpg" alt="Person" />
+
+              <blockquote>
+                "Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Maiores neque voluptas voluptatum! Molestiae quis, natus soluta
+                praesentium enim deleniti. At qui, aliquid aut praesentium
+                magnam eius dolorum ea quibusdam quis?"
+              </blockquote>
+              <cite>- John Doe</cite>
+            </li>
+            <li>
+              <img src="images/person.jpg" alt="Person" />
+
+              <blockquote>
+                "Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Maiores neque voluptas voluptatum! Molestiae quis, natus soluta
+                praesentium enim deleniti. At qui, aliquid aut praesentium
+                magnam eius dolorum ea quibusdam quis?"
+              </blockquote>
+              <cite>- John Doe</cite>
+            </li>
+            <li>
+              <img src="images/person.jpg" alt="Person" />
+
+              <blockquote>
+                "Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Maiores neque voluptas voluptatum! Molestiae quis, natus soluta
+                praesentium enim deleniti. At qui, aliquid aut praesentium
+                magnam eius dolorum ea quibusdam quis?"
+              </blockquote>
+              <cite>- John Doe</cite>
+            </li>
+          </div>
+        </section>
       </div>
     </div>
   </body>
