--- a/index.html
+++ b/index.html
@@ -111,6 +111,36 @@
             </li>
           </div>
         </section>
+
+        <section class="contact-section">
+          <div class="container">
+            <div class="contact-left">
+              <h2>Contact</h2>
+              <form action="">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" />
+
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" />
+
+                <label for="message">Message</label>
+                <textarea
+                  name="message"
+                  id="message"
+                  cols="30"
+                  rows="10"
+                ></textarea>
+
+                <input
+                  type="submit"
+                  class="send-message-cta"
+                  value="Send message"
+                />
+              </form>
+            </div>
+            <div class="contact-right"></div>
+          </div>
+        </section>
       </div>
     </div>
   </body>
