--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <body>
     <div class="navbar">
       <div class="container">
-        <a href="#">Html<span>Css</span></a>
+        <a class="logo" href="#">Html<span>CSS</span></a>
 
         <img
           id="mobile-cta"
           class="mobile-menu"
           src="images/menu.svg"
-          alt="open navigation"
+          alt="Open Navigation"
         />
 
         <nav>
@@ -24,135 +24,131 @@
             id="mobile-exit"
             class="mobile-menu-exit"
             src="images/exit.svg"
-            alt="Close navigation"
+            alt="Close Navigation"
           />
+
           <ul class="primary-nav">
             <li class="current"><a href="#">Home</a></li>
             <li><a href="#">Features</a></li>
             <li><a href="#">Pricing</a></li>
           </ul>
+
           <ul class="secondary-nav">
             <li><a href="#">Contact</a></li>
             <li class="go-premium-cta"><a href="#">Go Premium</a></li>
           </ul>
         </nav>
-
-        <section class="hero">
-          <div class="container">
-            <div class="left-col">
-              <p class="subhead">Its all CSS</p>
-              <h1>A design by Oscar</h1>
-              <div class="hero-cta">
-                <a href="#" class="primary-cta">Its a button</a>
-                <a href="#" class="watch-video-cta">
-                  <img src="images/watch.svg" alt="Watch a video" />
-                  Watch a video
-                </a>
-              </div>
-            </div>
-
-            <img
-              class="hero-image"
-              src="images/illustration.svg"
-              alt="Illustration image"
-            />
-          </div>
-        </section>
-
-        <section class="features-section">
-          <div class="container">
-            <ul>
-              <li>Unlimited Tasks</li>
-              <li>SMS Task Reminders</li>
-              <li>Confetti Explosions upon Task Completions</li>
-              <li>Social Media Announcements</li>
-              <li>Real Time Collaboration</li>
-              <li>Other awesome features</li>
-            </ul>
-
-            <img src="images/holding-phone.jpg" alt="Man holding phone" />
-          </div>
-        </section>
-
-        <section class="testimonials-section">
-          <div class="container">
-            <li>
-              <img src="images/person.jpg" alt="Person" />
-
-              <blockquote>
-                "Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Maiores neque voluptas voluptatum! Molestiae quis, natus soluta
-                praesentium enim deleniti. At qui, aliquid aut praesentium
-                magnam eius dolorum ea quibusdam quis?"
-              </blockquote>
-              <cite>- John Doe</cite>
-            </li>
-            <li>
-              <img src="images/person.jpg" alt="Person" />
-
-              <blockquote>
-                "Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Maiores neque voluptas voluptatum! Molestiae quis, natus soluta
-                praesentium enim deleniti. At qui, aliquid aut praesentium
-                magnam eius dolorum ea quibusdam quis?"
-              </blockquote>
-              <cite>- John Doe</cite>
-            </li>
-            <li>
-              <img src="images/person.jpg" alt="Person" />
-
-              <blockquote>
-                "Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Maiores neque voluptas voluptatum! Molestiae quis, natus soluta
-                praesentium enim deleniti. At qui, aliquid aut praesentium
-                magnam eius dolorum ea quibusdam quis?"
-              </blockquote>
-              <cite>- John Doe</cite>
-            </li>
-          </div>
-        </section>
-
-        <section class="contact-section">
-          <div class="container">
-            <div class="contact-left">
-              <h2>Contact</h2>
-              <form action="">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" />
-
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" />
-
-                <label for="message">Message</label>
-                <textarea
-                  name="message"
-                  id="message"
-                  cols="30"
-                  rows="10"
-                ></textarea>
-
-                <input
-                  type="submit"
-                  class="send-message-cta"
-                  value="Send message"
-                />
-              </form>
-            </div>
-            <div class="contact-right">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26430.393553120906!2d-118.43209796322542!3d34.10028430183922!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2bc35fbd217ef%3A0xcf1ef9352700d95c!2sBeverly%20Hills%2C%20CA%2090210!5e0!3m2!1sen!2sus!4v1611702818717!5m2!1sen!2sus"
-                width="600"
-                height="450"
-                frameborder="0"
-                style="border: 0"
-                allowfullscreen=""
-                aria-hidden="false"
-                tabindex="0"
-              ></iframe>
-            </div>
-          </div>
-        </section>
       </div>
     </div>
+
+    <section class="hero">
+      <div class="container">
+        <div class="left-col">
+          <p class="subhead">Its all CSS</p>
+          <h1>Design by Oscar</h1>
+
+          <div class="hero-cta">
+            <a href="#" class="primary-cta">Its a button</a>
+            <a href="#" class="watch-video-cta">
+              <img src="images/watch.svg" alt="Watch a video" />Watch a video
+            </a>
+          </div>
+        </div>
+
+        <img
+          src="images/illustration.svg"
+          class="hero-img"
+          alt="Illustration"
+        />
+      </div>
+    </section>
+
+    <section class="features-section">
+      <div class="container">
+        <ul class="features-list">
+          <li>Unlimited Tasks</li>
+          <li>SMS Task Reminders</li>
+          <li>Confetti Explosions upon Task Completions</li>
+          <li>Social Media Announcements</li>
+          <li>Real Time Collaboration</li>
+          <li>Other awesome features</li>
+        </ul>
+
+        <img src="images/holding-phone.jpg" alt="Man holding phone" />
+      </div>
+    </section>
+
+    <section class="testimonials-section">
+      <div class="container">
+        <ul>
+          <li>
+            <img src="images/person.jpg" alt="Person" />
+
+            <blockquote>
+              "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+              nonumy eirmod tempor invidunt ut labore et dolore"
+            </blockquote>
+            <cite>- John Doe</cite>
+          </li>
+          <li>
+            <img src="images/person.jpg" alt="Person" />
+
+            <blockquote>
+              "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+              nonumy eirmod tempor invidunt ut labore et dolore"
+            </blockquote>
+            <cite>- John Doe</cite>
+          </li>
+          <li>
+            <img src="images/person.jpg" alt="Person" />
+
+            <blockquote>
+              "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+              nonumy eirmod tempor invidunt ut labore et dolore"
+            </blockquote>
+            <cite>- John Doe</cite>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="contact-section">
+      <div class="container">
+        <div class="contact-left">
+          <h2>Contact</h2>
+
+          <form action="">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" />
+
+            <label for="message">Message</label>
+            <textarea
+              name="message"
+              id="message"
+              cols="30"
+              rows="10"
+            ></textarea>
+
+            <input
+              type="submit"
+              class="send-message-cta"
+              value="Send message"
+            />
+          </form>
+        </div>
+        <div class="contact-right">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26430.393553120906!2d-118.43209796322542!3d34.10028430183922!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2bc35fbd217ef%3A0xcf1ef9352700d95c!2sBeverly%20Hills%2C%20CA%2090210!5e0!3m2!1sen!2sus!4v1611702818717!5m2!1sen!2sus"
+            width="600"
+            height="450"
+            frameborder="0"
+            style="border: 0"
+            allowfullscreen=""
+            aria-hidden="false"
+            tabindex="0"
+          ></iframe>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
